docs: add documentation for Show Solicitante
